# flashwords

./: README.md  certs.sh  docker-compose.all.yml  docker-compose.yml  public.pem
backend/: Dockerfile  main.py  pyproject.toml  review_history.json  test.db  test.yaml  tree.txt  treeA.txt  vocab.csv  vocab_app.py
backend/app/: llm.py  main.py  questions.py  test_llm.py  test_questions.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: App.tsx  Setting.ts  index.tsx  reportWebVitals.ts
frontend/src/api/: auth.js
frontend/src/components/: AnswerOptions.tsx  AuthCallback.tsx  Charts.tsx  DashboardContainer.tsx  DataTable.tsx  LoginPage.tsx  RegisterPage.tsx  Review.tsx  VocabularyList.tsx  WordProgressChart.tsx  WordWidget.tsx  other.tsx
frontend/src/components/widgets/: ForeignShowSelfChecking.tsx
nginx/: Dockerfile  nginx.conf
oidc-casdoor/: docker-compose.yml  init_data.json
ssl/: nginx-certificate.crt  nginx.key
