[tool.poetry]
name = "vocabularius"
version = "0.1.0"
description = ""
authors = ["Alex Rudenkiy <alex-rudenkiy@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.4"
sqlalchemy = "^2.0.36"
tinydb = "^4.8.2"
scikit-learn = "^1.6.0"
numpy = "^2.2.1"
torch = { version = "^2.1.0", source = "pytorch" }
transformers = "^4.47.1"
pandas = "^2.2.3"
plotly = "^5.24.1"
uvicorn = "^0.34.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.20"
casdoor = "^1.26.0"
fastapi-another-jwt-auth = "^0.1.11"
pytest = "^8.3.4"
requests-mock = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

